# zkap-circuit

./: .env.example  .gitignore  .gitleaks.toml  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md  build.sh  build_common.rs  justfile  leaf_output.json
api/craby/: Cargo.toml
api/craby/src/: lib.rs
api/craby/src/api/: mod.rs
api/craby/src/dto/: anchor.rs  mod.rs  prover.rs
api/frb/: Cargo.toml
api/frb/src/: frb_generated.rs  lib.rs
api/frb/src/api/: anchor.rs  hash.rs  mod.rs  proof.rs  schnorr.rs  simple.rs
api/frb/src/dto/: anchor.rs  hash.rs  mod.rs  proof.rs  schnorr.rs
api/napi/: .gitattributes  Cargo.toml  index.d.ts  index.js  package-lock.json  package.json
api/napi/src/: lib.rs
api/napi/src/api/: anchor.rs  hash.rs  mod.rs  prover.rs
api/napi/src/dto/: anchor.rs  hash.rs  mod.rs  prover.rs
api/napi/test/: anchor.test.ts
circuit/: Cargo.toml
circuit/src/: lib.rs  to_solidity.rs
circuit/src/baerae/: constants.rs  mod.rs
circuit/src/token/: claimverifier.rs  mod.rs
circuit/src/zkpasskey/: hash.rs  light_weight.rs  mod.rs  opt_hash.rs
common/: Cargo.toml  build.rs
common/src/: constants.rs
crates/ark-utils/: Cargo.toml
crates/ark-utils/src/: affine_serde.rs  arithmetic.rs  bit_byte.rs  bit_bytes.rs  comparison.rs  comparison_v2.rs  convert.rs  debug.rs  error.rs  field_codec.rs  field_serde.rs  io.rs  jwt_field.rs  lib.rs  packing.rs  select.rs  slice.rs  slice_v2.rs  string_v2.rs  text.rs  uint32.rs
crates/ark-utils/src/codec/: affine.rs  field.rs  mod.rs  string.rs
crates/ark-utils/src/evm/: mod.rs
crates/ark-utils/src/r1cs/: comparison.rs  mod.rs  packing.rs  select.rs  slice.rs  uint32.rs
crates/ark-utils/src/wire/: circuit_config.rs  mod.rs  v1.rs
crates/circuit/: Cargo.toml  build.rs
crates/circuit/src/: constants.rs  error.rs  field_parser.rs  input.rs  io.rs  lib.rs  text.rs  types.rs  witness.rs  zkap.rs
crates/circuit/src/baerae/: input.rs  mod.rs
crates/circuit/src/evm/: groth16_verifier_solidity.rs  solidity_types.rs
crates/circuit/src/token/: claim_indices.rs  claimverifier.rs  constraints.rs  error.rs  jwt_field.rs  mod.rs  rsa.rs
crates/circuit/src/token/claimverifier/: format.rs
crates/circuit/src/zkpasskey/: barae.rs  base.rs  dl.rs  light_weight.rs  optdl.rs
crates/circuit/tests/: claim_verifier_internal.rs  groth16_integration.rs  jwt_field_internal.rs  r1cs_std_enforce_cmp_repro.rs
crates/cli/: Cargo.toml  build.rs
crates/cli/src/: lib.rs  manifest.rs
crates/cli/tests/: cli_smoke.rs  manifest_golden.rs
crates/common/: Cargo.toml
crates/common/src/: constants.rs  error.rs  field_parser.rs  io.rs  lib.rs
crates/common/src/evm/: mod.rs
crates/gadget/: CLAUDE.md  Cargo.toml
crates/gadget/src/: constants.rs  debug.rs  lib.rs
crates/gadget/src/anchor/: constraints.rs  error.rs  mod.rs  utils.rs
crates/gadget/src/base64/: constraints.rs  decoder.rs  error.rs  mod.rs  utils.rs
crates/gadget/src/bigint/: constraints.rs  mod.rs  utils.rs
crates/gadget/src/hashes/: constraints.rs  error.rs  mod.rs
crates/gadget/src/matrix/: constraints.rs  constraints_v2.rs  error.rs  mod.rs
crates/gadget/src/mekletree/: constraints.rs  tree_config.rs
crates/gadget/src/merkletree/: constraints.rs  mod.rs  tree_config.rs
crates/gadget/src/signature/: constraints.rs  errors.rs  mod.rs
crates/gadget/src/utils/: arithmetic.rs  bit_byte.rs  bit_bytes_v2.rs  comparison.rs  comparison_v2.rs  indexing.rs  mod.rs  select.rs  slice_v2.rs  string.rs  string_v2.rs  uint32.rs
crates/service/: Cargo.toml
crates/service/examples/: groth16_proof.rs  groth16_proof.rs.bak
crates/service/src/: crs.rs  error.rs  io.rs  lib.rs  manifest.rs
crates/service/src/anchor/: mod.rs  poseidon.rs  types.rs
crates/service/src/anchor_host/: mod.rs  poseidon.rs  types.rs
crates/service/src/api/: anchor.rs  hash.rs  mod.rs  setup.rs  snark.rs
crates/service/src/app/: mod.rs
crates/service/src/artifact/: error.rs  mod.rs  set.rs
crates/service/src/core/: mod.rs
crates/service/src/dto/: anchor.rs  hash.rs  mod.rs  proof.rs  prove.rs  public_inputs.rs
crates/service/src/error/: error.rs
crates/service/src/evm/: groth16_verifier_solidity.rs  mod.rs  solidity_types.rs
crates/service/src/groth16/: mod.rs
crates/service/src/hash/: mod.rs
crates/service/src/jwt/: builder.rs  mod.rs  parser.rs
crates/service/src/proof/: context.rs  generator.rs  mod.rs  request.rs  streaming_prover.rs  types.rs
crates/service/src/prover/: adapter.rs  mod.rs  prove.rs
crates/service/src/setup/: mod.rs
crates/service/src/utils/: mod.rs  padding.rs  point.rs
crates/service/src/witness/: error.rs  input.rs  mod.rs  request.rs
crates/service/tests/: artifact_set_load.rs  circuit_input_golden.rs  gen_proof_fixture.rs  groth16_e2e_prove_verify.rs  jwt_parser_parity.rs  l3_byte_gate.rs  manifest_signing.rs  native_prove_e2e.rs  pack_invariant.rs  pvk_serialization.rs  service_integration.rs  setup_rng.rs  witness_build_input.rs
crates/test/: Cargo.toml
crates/test/tests/: groth16_integration_test.rs  lib.rs  snark_v4_test.rs
crates/witness-gen-wasm/: Cargo.toml  PERF.md  baseline.json
crates/witness-gen-wasm/benches/: synthesize.rs
crates/witness-gen-wasm/benches/common/: mod.rs  wasm_runner.rs
crates/witness-gen-wasm/scripts/: check-regression.py  optimize-wasm.sh
crates/witness-gen-wasm/src/: lib.rs
crates/witness-gen-wasm/tests/: memory_profile.rs  parity.rs  r1cs_preflight.rs  wg_alloc_safety.rs
crates/zkap-evm-verifier/: Cargo.toml
crates/zkap-evm-verifier/src/: groth16_verifier_solidity.rs  lib.rs  solidity_types.rs
crates/zkap-evm-verifier/tests/: smoke.rs
crates/zkap-input-types/: Cargo.toml
crates/zkap-input-types/src/: lib.rs
crates/zkap-witness-wasm/: Cargo.toml  build-wasm.sh  build.rs
crates/zkap-witness-wasm/src/: error.rs  input.rs  lib.rs
crates/zkap-witness-wasm/tests/: input_builder_drift.rs  v1_round_trip.rs  wasm_to_prove.rs
crates/zkap-witness-wasm/tests/common/: mod.rs
(+236 files in other folders)
