[workspace]
resolver = "3"
members = [
    "crates/ark-utils",
    "crates/circuit",
    "crates/cli",
    "crates/gadget",
    "crates/service",
    "crates/zkap-witness-wasm",
]

[workspace.package]
repository = "https://github.com/snp-labs/zkap-circuit"
rust-version = "1.85"

[workspace.dependencies]
ark-utils                 = { path = "crates/ark-utils" }
gadget                    = { path = "crates/gadget", default-features = false }
circuit                   = { path = "crates/circuit" }
zkap-service              = { path = "crates/service" }
ark-ar1cs-format       = { git = "https://github.com/baerae-zkap/ark-ar1cs", rev = "7c8916467716467594345dd2f50cbb818e61f36e" }
ark-ar1cs-prover       = { git = "https://github.com/baerae-zkap/ark-ar1cs", rev = "7c8916467716467594345dd2f50cbb818e61f36e" }
ark-ar1cs-wasm-witness = { git = "https://github.com/baerae-zkap/ark-ar1cs", rev = "7c8916467716467594345dd2f50cbb818e61f36e" }
ark-ar1cs-wtns         = { git = "https://github.com/baerae-zkap/ark-ar1cs", rev = "7c8916467716467594345dd2f50cbb818e61f36e" }
ark-ar1cs-zkey         = { git = "https://github.com/baerae-zkap/ark-ar1cs", rev = "7c8916467716467594345dd2f50cbb818e61f36e" }

wasmi    = { version = "0.38", default-features = false, features = ["std"] }
postcard = { version = "1", default-features = false, features = ["alloc"] }

thiserror = { version = "2.0.12" }
serde = { version = "1.0.227", features = ["derive"] }
ark-groth16 = { version = "0.5.0" }  # default already includes parallel
ark-ec = { version = "0.5.0", features = ["parallel"] }
ark-ff = { version = "0.5.0", features = ["parallel"] }
ark-poly = { version = "0.5.0", features = ["parallel"] }
ark-r1cs-std = { version = "0.5.0" }
ark-relations = { version = "0.5.0" }
ark-std = { version = "0.5.0" }
ark-crypto-primitives = { version = "0.5.0" }
ark-bn254 = { version = "0.5.0" }
ark-ed-on-bn254 = { version = "0.5.0" }
ark-serialize = { version = "0.5.0" }
memmap2 = { version = "0.9.8" }
once_cell = { version = "1.21.3" }
base64 = { version = "0.22.1" }
derivative = { version = "2.2.0" }
regex = { version = "1.11.1" }
rsa = { version = "0.9.10" }
num = { version = "0.4" }
num-integer = { version = "0.1.46" }
num-bigint = { version = "0.4.6" }
num-traits = { version = "0.2.19" }
blake2 = { version = "0.10" }
hex = { version = "0.4" }
rand = { version = "0.8" }
sha2 = { version = "0.10" }

serde_json = { version = "1.0.145" }
clap = { version = "4.5.53" }
log = "0.4"


[profile.release]
lto = true
strip = "symbols"
panic = "abort"
