[workspace]
resolver = "3"
members = [
    "crates/ark-utils",
    "crates/circuit",
    "crates/cli",
    "crates/gadget",
    "crates/service",
    "crates/zkap-evm-verifier",
    "crates/zkap-witness-wasm",
]

[workspace.package]
repository = "https://github.com/snp-labs/zkap-circuit"
rust-version = "1.85"

# Workspace-wide rust lints. Each member's `Cargo.toml` opts in via
# `[lints] workspace = true`. Clippy CI is `--all-targets -- -D warnings`,
# so any `warn` here becomes a hard error on PRs.
[workspace.lints.rust]
# No unsafe Rust anywhere in this workspace except the explicit
# `unsafe extern "C"` FFI binding for mobile mi_collect (allowlisted at
# its module). New unsafe must be justified and locally allowed.
unsafe_code = "deny"
# Phase 8 H5-finalize: every lib crate (`ark-utils`, `circuit`,
# `gadget`, `zkap-service`) hit zero `missing_docs` warnings as of
# Phase 7 (H5-staged-1/2/3) and Phase 8 H5-staged-4. Promote the
# workspace-wide warn so future PRs surface a regression at the same
# CI gate (`cargo clippy --workspace --all-targets -- -D warnings`)
# instead of accumulating silently. Per-crate `#![warn(missing_docs)]`
# attributes (already in each lib crate's `lib.rs`) are now
# redundant but harmless — they remain as a defence-in-depth so
# `cargo build -p <crate>` still surfaces the warning even without
# the workspace lint inheritance.
missing_docs = "warn"
# `missing_debug_implementations = "warn"` is intentionally not enabled
# here: gadget's constraint-system variable types (e.g. `BigNatVar`,
# `Base64DecoderGadget`) hit it broadly without a clean derive path, so
# we defer until a separate PR can either derive `Debug` on the simple
# cases or scope the allow per module. Tracked in workspace-hygiene H4.

[workspace.dependencies]
ark-utils                 = { path = "crates/ark-utils" }
gadget                    = { path = "crates/gadget", default-features = false }
circuit                   = { path = "crates/circuit" }
zkap-service              = { path = "crates/service" }
zkap-evm-verifier         = { path = "crates/zkap-evm-verifier" }
ark-ar1cs-format       = { git = "https://github.com/baerae-zkap/ark-ar1cs", rev = "0370db0e89a72a9ae7eace683a1e37d1768bcf97" }
ark-ar1cs-prover       = { git = "https://github.com/baerae-zkap/ark-ar1cs", rev = "0370db0e89a72a9ae7eace683a1e37d1768bcf97" }
ark-ar1cs-wasm-witness = { git = "https://github.com/baerae-zkap/ark-ar1cs", rev = "0370db0e89a72a9ae7eace683a1e37d1768bcf97" }
ark-ar1cs-wtns         = { git = "https://github.com/baerae-zkap/ark-ar1cs", rev = "0370db0e89a72a9ae7eace683a1e37d1768bcf97" }
ark-ar1cs-zkey         = { git = "https://github.com/baerae-zkap/ark-ar1cs", rev = "0370db0e89a72a9ae7eace683a1e37d1768bcf97" }

wasmi    = { version = "0.38", default-features = false, features = ["std"] }
postcard = { version = "1", default-features = false, features = ["alloc"] }

thiserror = { version = "2.0.12" }
serde = { version = "1.0.227", features = ["derive"] }
ark-groth16 = { version = "0.6" }  # default already includes parallel
ark-ec = { version = "0.6", features = ["parallel"] }
ark-ff = { version = "0.6", features = ["parallel"] }
ark-poly = { version = "0.6", features = ["parallel"] }
ark-r1cs-std = { version = "0.6" }
ark-relations = { version = "0.6" }
ark-std = { version = "0.6" }
ark-crypto-primitives = { version = "0.6" }
ark-bn254 = { version = "0.6" }
ark-ed-on-bn254 = { version = "0.6" }
ark-serialize = { version = "0.6" }
memmap2 = { version = "0.9.8" }
once_cell = { version = "1.21.3" }
base64 = { version = "0.22.1" }
derivative = { version = "2.2.0" }
regex = { version = "1.11.1" }
rsa = { version = "0.9.10" }
num = { version = "0.4" }
num-integer = { version = "0.1.46" }
num-bigint = { version = "0.4.6" }
num-traits = { version = "0.2.19" }
blake2 = { version = "0.10" }
hex = { version = "0.4" }
rand = { version = "0.8" }
rand_chacha = { version = "0.3" }
sha2 = { version = "0.10" }
time = { version = "0.3", default-features = false, features = ["std", "formatting", "parsing"] }

serde_json = { version = "1.0.145" }
clap = { version = "4.5.53" }
log = "0.4"


[profile.release]
lto = true
strip = "symbols"
panic = "abort"

# Test-only profile that mirrors release optimization but flips panic
# back to unwind. Cargo does not propagate `panic = "abort"` from
# `[profile.release]` to test binaries (the test harness needs unwind),
# so a fresh `cargo test --release` build hits a panic-strategy
# mismatch (deps=abort vs test crate=unwind). CI runs the workspace
# test sweep with `cargo test --profile release-tests --workspace` to
# get release-level speed without the conflict; the mobile-targeted
# `[profile.release]` keeps `panic = "abort"` for binary size.
[profile.release-tests]
inherits = "release"
panic = "unwind"
# LTO inherited from [profile.release] adds heavy link-time cost (arkworks generic graph) without measurable test-execution benefit; release builds keep lto=true for mobile binary size.
lto = false
