[package]
name = "circuit"
version = "0.1.0"
edition = "2024"

[dependencies]
gadget = { workspace = true }

ark-groth16 = { workspace = true }
ark-ec = { workspace = true }
ark-ff = { workspace = true }
ark-poly = { workspace = true }
ark-r1cs-std = { workspace = true }
ark-relations = { workspace = true }
ark-std = { workspace = true }
ark-crypto-primitives = { workspace = true, features = ["crh", "r1cs", "prf", "merkle_tree"] }
ark-bn254 = { workspace = true }
ark-ed-on-bn254 = { workspace = true, features = ["r1cs"] }

[features]
default = []
print-trace = []
r1cs-debug = []