[package]
name = "common"
version = "0.1.0"
edition = "2024"

[dependencies]
gadget = { workspace = true }
zkpasskey-service = { workspace = true }

ark-groth16           = { workspace = true }
ark-ec                = { workspace = true }
ark-poly              = { workspace = true }
ark-crypto-primitives = { workspace = true }
ark-bn254             = { workspace = true }
ark-ed-on-bn254       = { workspace = true }
