[package]
name = "frb"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib", "lib"]
name = "frb"

[dependencies]
zkpasskey-service = { workspace = true }

flutter_rust_bridge = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }

[features]
default = ["r1cs-debug"]
r1cs-debug = ["zkpasskey-service/r1cs-debug"]