[package]
name = "ark-utils"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Arkworks utilities: R1CS gadgets, field serialization, EVM codegen, and common helpers"
repository = "https://github.com/snp-labs/zkap-circuit"
keywords = ["zk", "arkworks", "r1cs", "constraints", "evm"]
categories = ["cryptography"]

[dependencies]
thiserror = { workspace = true }
ark-ff = { workspace = true }
ark-std = { workspace = true }

# R1CS constraint gadgets (optional)
ark-r1cs-std = { workspace = true, optional = true }
ark-relations = { workspace = true, optional = true }

# EVM codegen (optional)
ark-groth16 = { workspace = true, optional = true }

# Field serde / EVM (optional)
ark-ec = { workspace = true, optional = true }
ark-serialize = { workspace = true, optional = true }
hex = { workspace = true, optional = true }

[dev-dependencies]
ark-bn254 = { workspace = true }

[features]
default = ["r1cs"]
r1cs = ["dep:ark-r1cs-std", "dep:ark-relations"]
evm-codegen = ["dep:ark-groth16", "dep:ark-ec"]
field-serde = ["dep:ark-ec", "dep:hex"]
io = ["dep:ark-serialize"]
constraints-logging = ["r1cs"]
