[package]
name = "circuit"
version = "0.1.0"
edition = "2024"

[dependencies]
gadget = { workspace = true, default-features = false, features = ["crypto", "base64", "rsa"] }
ark-utils = { workspace = true }

ark-groth16 = { workspace = true }
ark-ec = { workspace = true }
ark-ff = { workspace = true }
ark-poly = { workspace = true }
ark-r1cs-std = { workspace = true }
ark-relations = { workspace = true }
ark-std = { workspace = true }
ark-crypto-primitives = { workspace = true, features = ["crh", "r1cs", "prf", "merkle_tree"] }
ark-bn254 = { workspace = true }
ark-ed-on-bn254 = { workspace = true, features = ["r1cs"] }
ark-serialize = { workspace = true }

regex = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true, features = ["derive"] }
hex = { workspace = true }

[build-dependencies]
dotenvy = { workspace = true }

[features]
default = []
print-trace = ["gadget/print-trace"]
constraints-logging = ["gadget/constraints-logging"]
baerae = []
num-cs-logging = ["gadget/num-cs-logging"]

[dev-dependencies]
rsa = { workspace = true }
sha2 = { workspace = true }
rand = { workspace = true }
base64 = { workspace = true }

[[bin]]
name = "generate_baerae_crs"
path = "src/bin/generate_baerae_crs.rs"

[[bin]]
name = "generate_hash"
path = "src/bin/generate_hash.rs"

[[test]]
name = "groth16_integration"
required-features = ["baerae"]
