[package]
name = "circuit"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "ZK circuit implementation for JWT/OAuth proof generation with Groth16"
repository = "https://github.com/snp-labs/zkap-circuit"
keywords = ["zk", "groth16", "jwt", "oauth", "circuit"]
categories = ["cryptography"]

[dependencies]
gadget = { workspace = true, default-features = false, features = ["crypto", "base64", "rsa"] }
ark-utils = { workspace = true }

ark-groth16 = { workspace = true }
ark-ec = { workspace = true }
ark-ff = { workspace = true }
ark-poly = { workspace = true }
ark-r1cs-std = { workspace = true }
ark-relations = { workspace = true }
ark-std = { workspace = true }
ark-crypto-primitives = { workspace = true, features = ["crh", "r1cs", "prf", "merkle_tree"] }
ark-bn254 = { workspace = true }
ark-ed-on-bn254 = { workspace = true, features = ["r1cs"] }
ark-serialize = { workspace = true }

thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
hex = { workspace = true }

[build-dependencies]
dotenvy = { workspace = true }

[features]
default = []
print-trace = ["gadget/print-trace"]
constraints-logging = ["gadget/constraints-logging"]
baerae = []
num-cs-logging = ["gadget/num-cs-logging"]

[dev-dependencies]
ark-utils = { workspace = true }
rsa = { workspace = true }
sha2 = { workspace = true }
rand = { workspace = true }
base64 = { workspace = true }
regex = { workspace = true }

[[test]]
name = "groth16_integration"
required-features = ["baerae"]
