[package]
name = "zkap-cli"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "CLI tools for ZK circuit CRS generation and hash computation"
repository = "https://github.com/snp-labs/zkap-circuit"
build = "build.rs"

[dependencies]
circuit = { workspace = true }
zkap-service = { workspace = true }

clap = { workspace = true, features = ["derive"] }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
thiserror = { workspace = true }
rand = { workspace = true }
rand_chacha = { workspace = true }
time = { workspace = true }
wasmparser = "0.246"

[lib]
name = "zkap_cli"
path = "src/lib.rs"

[[bin]]
name = "generate_crs"
path = "src/bin/generate_crs.rs"

[[bin]]
name = "generate_hash"
path = "src/bin/generate_hash.rs"

[[bin]]
name = "generate_setup"
path = "src/bin/generate_setup.rs"

[lints]
workspace = true
