[package]
name = "zkap-cli"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "CLI tools for ZK circuit CRS generation and hash computation"
repository = "https://github.com/snp-labs/zkap-circuit"
build = "build.rs"

[dependencies]
circuit = { workspace = true }
zkap-service = { workspace = true }
# `circuit.ar1cs` body_blake3 read helper needs the format envelope
# (re-exported from the `ark-ar1cs` root crate after Commit 4 of the
# 2026-05 ark-ar1cs boundary migration).
ark-ar1cs = { workspace = true }

clap = { workspace = true, features = ["derive"] }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
thiserror = { workspace = true }
rand = { workspace = true }
rand_chacha = { workspace = true }
time = { workspace = true }

[lib]
name = "zkap_cli"
path = "src/lib.rs"

# `generate_setup` is the canonical CLI binary; pre-migration setup
# binaries were retired in the 2026-05 ark-ar1cs boundary migration
# (Commit 2).

[[bin]]
name = "generate_hash"
path = "src/bin/generate_hash.rs"

[[bin]]
name = "generate_setup"
path = "src/bin/generate_setup.rs"

[lints]
workspace = true
