[package]
name = "gadget"
version = "0.1.0"
edition = "2024"

[dependencies]
thiserror = { workspace = true }
ark-serialize = { workspace = true }
hex = { workspace = true }
num = { workspace = true }
num-integer = { workspace = true }
num-bigint = { workspace = true }
num-traits = { workspace = true }
rand = { workspace = true }
sha2 = { workspace = true, features = ["oid"] }
blake2 = { workspace = true }
base64 = { workspace = true }
regex = { workspace = true }
derivative = { workspace = true }
rsa = { workspace = true }

ark-groth16 = { workspace = true }
ark-ec = { workspace = true }
ark-ff = { workspace = true }
ark-poly = { workspace = true }
ark-r1cs-std = { workspace = true }
ark-relations = { workspace = true }
ark-std = { workspace = true }
ark-crypto-primitives = { workspace = true, features = ["crh", "r1cs", "prf", "merkle_tree"] }
ark-bn254 = { workspace = true }
ark-ed-on-bn254 = { workspace = true, features = ["r1cs"] }

[features]
print-trace = ["ark-std/print-trace"]
constraints-logging = []
