[package]
name = "gadget"
version = "0.1.0"
edition = "2024"

[dependencies]
thiserror = { workspace = true }
ark-serialize = { workspace = true }

# Always required (WASM-compatible)
ark-ec = { workspace = true }
ark-ff = { workspace = true }
ark-r1cs-std = { workspace = true }
ark-relations = { workspace = true }
ark-std = { workspace = true }
ark-crypto-primitives = { workspace = true, features = ["crh", "r1cs", "prf", "merkle_tree"] }
ark-bn254 = { workspace = true }
ark-ed-on-bn254 = { workspace = true, features = ["r1cs"] }

# Optional — only needed by full feature (non-WASM modules)
hex = { workspace = true, optional = true }
num = { workspace = true, optional = true }
num-integer = { workspace = true, optional = true }
num-bigint = { workspace = true, optional = true }
num-traits = { workspace = true, optional = true }
rand = { workspace = true, optional = true }
sha2 = { workspace = true, features = ["oid"], optional = true }
blake2 = { workspace = true, optional = true }
base64 = { workspace = true, optional = true }
derivative = { workspace = true, optional = true }
rsa = { workspace = true, optional = true }
# regex removed — unused in gadget src/ (used by circuit directly)
ark-groth16 = { workspace = true, optional = true }
ark-poly = { workspace = true, optional = true }

[features]
default = ["full"]
full = [
    "hex", "num", "num-integer", "num-bigint", "num-traits", "rand",
    "sha2", "blake2", "base64", "derivative", "rsa",
    "ark-groth16", "ark-poly",
]
# Note: regex removed — unused in gadget (used by circuit directly)
print-trace = ["ark-std/print-trace"]
constraints-logging = []
num-cs-logging = []
