[package]
name = "gadget"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "ZK circuit gadgets for JWT verification, RSA signatures, Poseidon hashing, and Base64 decoding"
repository = "https://github.com/snp-labs/zkap-circuit"
keywords = ["zk", "arkworks", "gadget", "groth16", "jwt"]
categories = ["cryptography"]

[dependencies]
ark-utils = { workspace = true }
thiserror = { workspace = true }
ark-serialize = { workspace = true }

# Always required (WASM-compatible)
ark-ec = { workspace = true }
ark-ff = { workspace = true }
ark-r1cs-std = { workspace = true }
ark-relations = { workspace = true }
ark-std = { workspace = true }
ark-crypto-primitives = { workspace = true, features = ["crh", "r1cs", "prf", "merkle_tree"] }
ark-bn254 = { workspace = true }
ark-ed-on-bn254 = { workspace = true, features = ["r1cs"] }

# Optional — only needed by full feature (non-WASM modules)
hex = { workspace = true, optional = true }
num = { workspace = true, optional = true }
num-integer = { workspace = true, optional = true }
num-bigint = { workspace = true, optional = true }
num-traits = { workspace = true, optional = true }
rand = { workspace = true, optional = true }
sha2 = { workspace = true, features = ["oid"], optional = true }
blake2 = { workspace = true, optional = true }
base64 = { workspace = true, optional = true }
derivative = { workspace = true, optional = true }
rsa = { workspace = true, optional = true }
# regex removed — unused in gadget src/ (used by circuit directly)
# ark-groth16 and ark-poly removed — unused in gadget src/

[features]
default = []

# Core module features
anchor = ["hashes-poseidon"]
base64 = ["dep:base64"]
hashes-poseidon = []
hashes-sha256 = ["dep:sha2"]
merkletree = ["hashes-poseidon"]
rsa = ["dep:rsa", "dep:num-bigint", "dep:num-integer", "dep:num-traits", "dep:num", "dep:sha2", "dep:hex", "dep:rand", "dep:derivative", "dep:blake2"]

# Bundle features
crypto = ["hashes-poseidon", "hashes-sha256", "anchor", "merkletree"]
full = ["crypto", "base64", "rsa"]

# Debug features
print-trace = ["ark-std/print-trace"]
constraints-logging = []
num-cs-logging = []
