[package]
name = "zkap-service"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Service layer for ZK proof generation and key management"
repository = "https://github.com/snp-labs/zkap-circuit"
keywords = ["zk", "proof-generation", "groth16"]
categories = ["cryptography"]

[dependencies]
# --- Always required (lightweight, WASM-compatible) ---
gadget = { workspace = true, default-features = false, features = ["crypto", "base64", "rsa"] }
circuit = { workspace = true }
ark-utils = { workspace = true, features = ["field-serde", "io"] }

thiserror = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }

ark-ff                = { workspace = true }
ark-std               = { workspace = true }
ark-crypto-primitives = { workspace = true }
ark-bn254             = { workspace = true }
log = { workspace = true }
hex = { workspace = true }
# Always-on: `manifest` module needs sha2 (ceremony chain_hash,
# compute_circuit_tag) and must stay proof-feature-independent so light
# bindings can depend on it cheaply. The runtime cost of pulling sha2
# unconditionally is negligible.
sha2 = { workspace = true }

# --- Proof-only dependencies (optional, heavy) ---
zkap-evm-verifier     = { workspace = true, optional = true }
ark-ec                = { workspace = true, optional = true }
ark-groth16           = { workspace = true, optional = true }
ark-poly              = { workspace = true, optional = true }
ark-r1cs-std          = { workspace = true, optional = true }
ark-relations         = { workspace = true, optional = true }
ark-serialize         = { workspace = true, optional = true }
memmap2               = { workspace = true, optional = true }
blake2                = { workspace = true, optional = true }
rand                  = { workspace = true, optional = true }
ark-ar1cs-format       = { workspace = true, optional = true }
ark-ar1cs-prover       = { workspace = true, optional = true }
ark-ar1cs-wasm-witness = { workspace = true, optional = true }
ark-ar1cs-wtns         = { workspace = true, optional = true }
ark-ar1cs-zkey         = { workspace = true, optional = true }

wasmi    = { workspace = true, optional = true }
postcard = { workspace = true, optional = true }

[dev-dependencies]
signature = "2"
ark-std = { workspace = true }
rsa = { workspace = true }
base64 = { workspace = true }
hex = { workspace = true }
sha2 = { workspace = true }
ark-relations = { workspace = true }
circuit = { workspace = true }
postcard = { workspace = true }

[lib]
name = "zkap_service"
crate-type = ["staticlib", "cdylib", "rlib"]

# NB: the `groth16_proof` example targets the legacy hex/Base64
# `RawProofRequest::new` shape and predates the wasm-witness runtime.
# Rewriting it for the V1-byte API requires bundling a paired
# `.wasm` artifact at example-run time; tracked as a follow-up. The
# example file is preserved as a reference until that rewrite lands.

[features]
default = ["proof"]
proof = [
    "dep:zkap-evm-verifier",
    "dep:ark-ec",
    "dep:ark-groth16",
    "dep:ark-poly",
    "dep:ark-r1cs-std",
    "dep:ark-relations",
    "dep:ark-serialize",
    "dep:memmap2",
    "dep:blake2",
    "dep:rand",
    "dep:ark-ar1cs-format",
    "dep:ark-ar1cs-prover",
    "dep:ark-ar1cs-wasm-witness",
    "dep:ark-ar1cs-wtns",
    "dep:ark-ar1cs-zkey",
    "dep:postcard",
    "runtime-wasmi",
]
runtime-wasmi    = ["dep:wasmi"]
runtime-wasmtime = []  # reserved, unimplemented (see plan §10.2)
# `use-optimized` previously gated the streaming Groth16 prover; the
# wasm-witness runtime path obsoletes streaming so the feature is now a
# no-op alias kept for source-compat with downstream Cargo invocations.
use-optimized = ["proof"]
print-trace = ["circuit/print-trace"]

# Example temporarily disabled — see comment above the [features] block.
# [[example]]
# name = "groth16_proof"

[lints]
workspace = true
