[package]
name = "zkap-service"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Service layer for ZK proof generation and key management"
repository = "https://github.com/snp-labs/zkap-circuit"
keywords = ["zk", "proof-generation", "groth16"]
categories = ["cryptography"]

[dependencies]
# --- Always required (lightweight, WASM-compatible) ---
gadget = { workspace = true, default-features = false, features = ["crypto", "base64", "rsa"] }
circuit = { workspace = true }
ark-utils = { workspace = true, features = ["field-serde", "io"] }

thiserror = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }

ark-ff                = { workspace = true }
ark-std               = { workspace = true }
ark-crypto-primitives = { workspace = true }
ark-bn254             = { workspace = true }
log = { workspace = true }
hex = { workspace = true }
# Always-on: `manifest` module needs sha2 (ceremony chain_hash,
# compute_circuit_tag) and must stay proof-feature-independent so light
# bindings can depend on it cheaply. The runtime cost of pulling sha2
# unconditionally is negligible.
sha2 = { workspace = true }

# --- Proof-only dependencies (optional, heavy) ---
zkap-evm-verifier     = { workspace = true, optional = true }
ark-ec                = { workspace = true, optional = true }
ark-groth16           = { workspace = true, optional = true }
ark-poly              = { workspace = true, optional = true }
ark-r1cs-std          = { workspace = true, optional = true }
ark-relations         = { workspace = true, optional = true }
ark-serialize         = { workspace = true, optional = true }
memmap2               = { workspace = true, optional = true }
blake2                = { workspace = true, optional = true }
rand                  = { workspace = true, optional = true }
# Native prove flow — Commit 4 of the 2026-05 ark-ar1cs boundary
# migration. The `ark-ar1cs` root crate exposes `prove`,
# `synthesize_full_assignment`, and the `format::ArcsFile` envelope
# that `ArtifactSet` loads from `circuit.ar1cs`.
ark-ar1cs              = { workspace = true, optional = true }

[dev-dependencies]
signature = "2"
ark-std = { workspace = true }
rsa = { workspace = true }
base64 = { workspace = true }
hex = { workspace = true }
sha2 = { workspace = true }
ark-relations = { workspace = true }
circuit = { workspace = true }
postcard = { workspace = true }

[lib]
name = "zkap_service"
crate-type = ["staticlib", "cdylib", "rlib"]

# `crates/service/examples/` is empty today. The end-to-end exercise
# of `service::Prover::prove` lives in
# `crates/service/tests/native_prove_e2e.rs` (signature guards) and
# the slow `circuit::tests::groth16_integration` suite.

[features]
default = ["proof"]
proof = [
    "dep:zkap-evm-verifier",
    "dep:ark-ec",
    "dep:ark-groth16",
    "dep:ark-poly",
    "dep:ark-r1cs-std",
    "dep:ark-relations",
    "dep:ark-serialize",
    "dep:memmap2",
    "dep:blake2",
    "dep:rand",
    "dep:ark-ar1cs",
]
print-trace = ["circuit/print-trace"]

# Example temporarily disabled — see comment above the [features] block.
# [[example]]
# name = "groth16_proof"

[lints]
workspace = true
