[package]
name = "test"
version = "0.1.0"
edition = "2024"

[dependencies]
gadget = { workspace = true }
circuit = { workspace = true }
zkpasskey-service = { workspace = true }
common = { workspace = true }

ark-groth16           = { workspace = true }
ark-ec                = { workspace = true }
ark-ff                = { workspace = true }
ark-poly              = { workspace = true }
ark-r1cs-std          = { workspace = true }
ark-relations         = { workspace = true }
ark-std               = { workspace = true }
ark-crypto-primitives = { workspace = true }
ark-bn254             = { workspace = true }
ark-ed-on-bn254       = { workspace = true }
ark-serialize         = { workspace = true }
log                   = { workspace = true }
env_logger = "0.10"

[features]
print-trace = ["ark-groth16/print-trace"]
constraints-logging = ["circuit/constraints-logging", "gadget/constraints-logging"]
use-optimized = ["zkpasskey-service/use-optimized"]
memory-logging = ["ark-groth16/memory-logging"]